# BookmarkManager

./: .gitignore  README.md  bookmarks.sqlite3  bookmarks.sqlite3.bak  pyproject.toml
src/bookmark_manager/: __init__.py
src/bookmark_manager/app/: bootstrap.py  dispatcher.py  intents.py  main.py  projections.py  state_store.py
src/bookmark_manager/domain/: models.py  normalization.py  search.py  sorting.py
src/bookmark_manager/infra/: database.py
src/bookmark_manager/repositories/: bookmark.py  bookmark_tag.py  tag.py
src/bookmark_manager/services/: bookmark.py  clipboard.py  search.py  selection.py  tag_view.py
src/bookmark_manager/ui/: main_window.py
src/bookmark_manager/ui/dialogs/: bookmark_editor.py  bookmark_editor_presenter.py  duplicate_resolution.py
src/bookmark_manager/ui/viewmodels/: bookmark_row_state.py  content_state.py  search_results_state.py  tag_section_state.py
src/bookmark_manager/ui/widgets/: bookmark_row.py
src/bookmark_manager/utils/: models.py  url_formatter.py
