[project]
name = "bookmark-manager"
version = "0.1.0"
description = "An app for managing bookmarks"
readme = "README.md"
authors = [
    { name = "T1nyTim", email = "t1nytim@example.com" }
]
requires-python = ">=3.14"
dependencies = [
    "pyside6>=6.11.0",
]

[project.scripts]
bookmark-manager = "bookmark_manager.app.main:main"

[build-system]
requires = ["uv_build>=0.8.3,<0.9.0"]
build-backend = "uv_build"

[tool.ruff.lint]
ignore = ["D100", "D101", "D102", "D103", "D104", "D107", "TD002", "TD003"]
